Renaming some function arguments for clarity

--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -18,16 +18,16 @@
 // ---
 // @return [list]
 // ---
-@function jeet-get-column($ratios: 1, $g: $jeet-gutter) {
+@function jeet-get-column($ratios: 1, $gutter: $jeet-gutter) {
   $ratios: if(not $jeet-parent-first, jeet-reverse($ratios), $ratios);
-  $w: 100;
+  $width: 100;
   
   @each $ratio in $ratios {
-    $g: $g / $w * 100;
-    $w: 100 * $ratio - $g + $ratio * $g;
+    $gutter: $gutter / $width * 100;
+    $width: 100 * $ratio - $gutter + $ratio * $gutter;
   }
   
-  @return $w $g;
+  @return $width $gutter;
 }
 
 // Getter - layout direction 
@@ -97,31 +97,31 @@
 
 // Helper - opposite-direction
 // ---
-// @param [string] $dir: direction  
+// @param [string] $direction: direction  
 // ---
 // @return [string] | false
 // ---
-@function jeet-opposite-direction($dir) {
-  @if $dir == "left" {
+@function jeet-opposite-direction($direction) {
+  @if $direction == "left" {
     @return right;
   }
-  @else if $dir == "right" {
+  @else if $direction == "right" {
     @return left;
   }
-  @else if $dir == "top" {
+  @else if $direction == "top" {
     @return bottom;
   }
-  @else if $dir == "bottom" {
+  @else if $direction == "bottom" {
     @return top;
   }
-  @else if index("ltr" "LTR", $dir) {
+  @else if index("ltr" "LTR", $direction) {
     @return rtl;
   }
-  @else if index("rtl" "RTL", $dir) {
+  @else if index("rtl" "RTL", $direction) {
     @return ltr;
   }
   @else {
-    @warn "`#{$dir}` is not a direction; please make sure your direction is all lowercase.";
+    @warn "`#{$direction}` is not a direction; please make sure your direction is all lowercase.";
     @return false;
   }
 }
