Update MT link to point to land page

--- a/src/views/_footer.jade
+++ b/src/views/_footer.jade
@@ -4,7 +4,7 @@ footer.footer(data-scroll-index='7')
       | Made with
       span.heart
         |&hearts;
-      | by 
-      a.mojotech.white(href='http://mojotech.com')
+      | by
+      a.mojotech.white(href='http://jeet.gs/awwwards')
         strong MojoTech
     p.copyright.white © 2014 MojoTech · All rights reserved.
