--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -22,9 +22,10 @@ html
       <link rel='stylesheet', href='css/ie.css'>
       <![endif
   body.landing-page
-    .right.black#awwwards
-      div.github-ribbon
-        a.github-ribbon__link(href="https://github.com/mojotech/jeet", title="Fork me on GitHub") Fork me on GitHub
+    div.github-ribbon
+      a.github-ribbon__link(href="https://github.com/mojotech/jeet", title="Fork me on GitHub") Fork me on GitHub
+    a.awwwards
+      img(src="img/awwwards_sotd_black_right2x.png", alt="Site of the Day")
     block content
 
   script(type="text/javascript", src='js/vendor/custom-modernizr.js')
