--- a/awwwards/css/style.styl
+++ b/awwwards/css/style.styl
@@ -92,7 +92,8 @@ html
     padding: 10px 40px
     transition: all 200ms ease
     &:hover
-      background: rgba(#ed1c37, 50%)
+      background: #fff
+      color: #ed1c37
 
 .h1
   font-size: 55px
