Add link to SotD ribbon

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -24,7 +24,7 @@ html
   body.landing-page
     div.github-ribbon
       a.github-ribbon__link(href="https://github.com/mojotech/jeet", title="Fork me on GitHub") Fork me on GitHub
-    a.awwwards
+    a.awwwards(href="http://jeet.gs/awwwards")
       img(src="img/awwwards_sotd_black_right2x.png", alt="Site of the Day")
     block content
 
