Put space between <3 by and Mojotech

--- a/src/views/_footer.jade
+++ b/src/views/_footer.jade
@@ -1,10 +1,10 @@
 footer.footer(data-scroll-index='7')
   .contained
     p.attribution.white.align-example
-      | Made with
+      | Made with&nbsp;
       span.heart
         |&hearts;
-      | by
+      | by&nbsp;
       a.mojotech.white(href='http://jeet.gs/awwwards')
         strong MojoTech
     p.copyright.white © 2014 MojoTech · All rights reserved.
