--- a/src/views/_resources.jade
+++ b/src/views/_resources.jade
@@ -14,9 +14,10 @@
           img.play-btn(src='img/play-icon.svg')
         h3 Getting Started
     .third.tight.video.advanced-use.scrollReveal.flip-staggered-third
-      a.fancybox(href='javascript:void;')
+      a.fancybox(href='https://www.youtube.com/watch?v=JRXMXHIgOkU')
         .play.tutorial
-        h3 Advanced (Coming Soon)
+          img.play-btn(src='img/play-icon.svg')
+        h3 Advanced
   .cf
     .cf.cf-example
   include _nav-full-color
