--- a/src/assets/css/_resources.styl
+++ b/src/assets/css/_resources.styl
@@ -35,9 +35,8 @@
     background-size: cover
 .advanced-use
   .tutorial
-    opacity: .5
-    &:hover
-      opacity: .5
+    background: url(../img/advanced-usage.png) no-repeat
+    background-size: cover
 .focused-example
   &.third.tight
     padding (small-padding-block + 4) 0 (xs-padding-block - 2) 0
