[fix] github banner overhang

--- a/css/master.css
+++ b/css/master.css
@@ -3112,6 +3112,14 @@ strong {
   font-weight: bold;
   text-decoration: underline;
 }
+.github-ribbon__clip {
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: hidden;
+  width: 163px;
+  height: 163px;
+}
 .github-ribbon {
   position: absolute;
   top: -35px;
