--- a/src/assets/css/_github.styl
+++ b/src/assets/css/_github.styl
@@ -1,5 +1,12 @@
 $c-bg = #424242
 
+.github-ribbon__clip
+  position: absolute
+  top: 0
+  right: 0
+  overflow: hidden
+  width: 163px
+  height: 163px
 .github-ribbon
   position: absolute
   top: -35px
