--- a/src/assets/css/_github.styl
+++ b/src/assets/css/_github.styl
@@ -7,6 +7,8 @@ $c-bg = #424242
   overflow: hidden
   width: 163px
   height: 163px
+  +below(small-snap)
+    display: none
 .github-ribbon
   position: absolute
   top: -35px
