--- a/awwwards/css/style.styl
+++ b/awwwards/css/style.styl
@@ -71,6 +71,9 @@ html
   col(1/5)
   margin-top: 45px
   margin-bottom: 90px
+  img
+    width: 140px
+    height: 40px
   +below(break)
     stack()
     width: 170px
@@ -98,6 +101,7 @@ html
 
 .h1
   font-size: 55px
+  font-weight: normal
   line-height: 1.2
   margin-bottom: 30px
   +below(break)
