--- a/src/assets/css/_footer.styl
+++ b/src/assets/css/_footer.styl
@@ -34,6 +34,7 @@
 .attribution
   align(both)
   transform-style: preserve-3d
+  text-decoration none
   +below(med-snap)
     position static
     width 100%
