--- a/src/views/_footer.jade
+++ b/src/views/_footer.jade
@@ -1,10 +1,9 @@
 footer.footer(data-scroll-index='7')
   .contained
-    p.attribution.white.align-example
+    a.attribution.white.align-example(href='http://jeet.gs/awwwards')
       | Made with&nbsp;
       span.heart
         |&hearts;
       | by&nbsp;
-      a.mojotech.white(href='http://jeet.gs/awwwards')
-        strong MojoTech
+      strong.mojotech.white MojoTech
     p.copyright.white © 2014 MojoTech · All rights reserved.
