--- a/src/views/_resources.jade
+++ b/src/views/_resources.jade
@@ -6,17 +6,17 @@
     .third.tight.video.getting-started.shift-example.scrollReveal.flip-staggered-second
       a.fancybox(href='https://www.youtube.com/watch?v=roqlCwEn4iI')
         .play.tutorial
-          img.play-btn(src='img/play-icon.svg')
+          img.play-btn(src='img/play-icon.svg', alt="Play")
         h3 Basic Usage
     .third.tight.video.basic-use.scrollReveal.shift-example
       a.fancybox(href='https://www.youtube.com/watch?v=eGswREjYH84')
         .play.tutorial
-          img.play-btn(src='img/play-icon.svg')
+          img.play-btn(src='img/play-icon.svg', alt="Play")
         h3 Getting Started
     .third.tight.video.advanced-use.scrollReveal.flip-staggered-third
       a.fancybox(href='https://www.youtube.com/watch?v=JRXMXHIgOkU')
         .play.tutorial
-          img.play-btn(src='img/play-icon.svg')
+          img.play-btn(src='img/play-icon.svg', alt="Play")
         h3 Advanced
   .cf
     .cf.cf-example
