--- a/src/assets/css/_awwwards.styl
+++ b/src/assets/css/_awwwards.styl
@@ -1,8 +1,10 @@
 .awwwards
   position: absolute
-  top: 170px
+  top: 145px
   right: 0
   z-index: 999
+  +below(xl-snap)
+    top: 205px
   +below(med-snap)
     display: none
   img
