--- a/src/assets/css/_github.styl
+++ b/src/assets/css/_github.styl
@@ -1,32 +1,15 @@
 $c-bg = #424242
 
-.github-ribbon__clip
+.github-ribbon
   position: absolute
   top: 0
   right: 0
-  overflow: hidden
-  width: 163px
-  height: 163px
-  +below(small-snap)
-    display: none
-.github-ribbon
-  position: absolute
-  top: -35px
-  right: -100px
-  padding: 1px 0
-  transform-origin: top left
-  transform: rotate(45deg)
-  background-color: $c-bg
   z-index: 100
-.github-ribbon__link
-  display: inline-block
-  width: 250px
-  color: #fff
-  font-size: 0.8em
-  letter-spacing: 0.06em
-  text-shadow: 0 -1px #777
-  text-decoration: none
-  text-align: center
-  line-height: 30px
-  border-top: 1px dotted lighten($c-bg, 30%)
-  border-bottom: 1px dotted lighten($c-bg, 20%)
+  width: 163px
+  +below(xl-snap)
+    z-index: 99
+    top: 57px
+  +below(med-snap)
+    display: none
+  img
+    max-width: 100%
