--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -22,9 +22,8 @@ html
       <link rel='stylesheet', href='css/ie.css'>
       <![endif
   body.landing-page
-    .github-ribbon__clip
-      .github-ribbon
-        a.github-ribbon__link(href="https://github.com/mojotech/jeet", title="Fork me on GitHub") Fork me on GitHub
+    a.github-ribbon(href="http://github.com/mojotech/jeet")
+      img(src="img/github-banner.png", alt="Fork Jeet on Github")
     a.awwwards(href="http://jeet.gs/awwwards")
       img(src="img/awwwards_sotd_black_right2x.png", alt="Site of the Day")
     block content
