--- a/src/assets/css/_installation.styl
+++ b/src/assets/css/_installation.styl
@@ -53,8 +53,7 @@
     background orange
     min-height 18px
     +below(small-snap)
-      line-height 20px
-      max-height 18px
+      display: none
     &:hover, &.zeroclipboard-is-hover
       background white
       color orange
