--- a/scss/jeet/_grid.scss
+++ b/scss/jeet/_grid.scss
@@ -174,9 +174,9 @@
   }
 }
 
-// Horizontal/Vertical/Both Alignment - Parent container needs position relative. IE9+
-@mixin align($direction: both) {
-  position: absolute;
+// Horizontal/Vertical/Both Alignment - for position use either absolute (default) or relative. Parent container needs position relative if you set it to absolute. IE9+
+@mixin align($direction: both, $position: absolute) {
+  position: $position;
   @include jeet-prefixer(transform-style, preserve-3d);
   @if ($direction == horizontal) or ($direction == h) {
     left: 50%;
