Fix Mixed Content issue

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -14,9 +14,9 @@ html
     meta(name="twitter:description", content="CSS preprocessor grid built with fractions and ratios to make columns flexible and your workflow fast.")
 
     title Jeet Grid System | Smart CSS preprocessor grids
-    script(type="text/javascript", src="http://fast.fonts.net/jsapi/9f115ec9-04c6-49ed-bf53-7dc9921e4184.js")
-    script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
-    //- link(type="text/css", rel="stylesheet", href='http://fast.fonts.net/cssapi/9f115ec9-04c6-49ed-bf53-7dc9921e4184.css')
+    script(type="text/javascript", src="//fast.fonts.net/jsapi/9f115ec9-04c6-49ed-bf53-7dc9921e4184.js")
+    script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+    //- link(type="text/css", rel="stylesheet", href='//fast.fonts.net/cssapi/9f115ec9-04c6-49ed-bf53-7dc9921e4184.css')
     link(rel='stylesheet', href='css/master.css')
     //[if lt IE 10]>
       <link rel='stylesheet', href='css/ie.css'>
