--- a/src/assets/css/_github.styl
+++ b/src/assets/css/_github.styl
@@ -2,10 +2,13 @@ $c-bg = #424242
 
 .github-ribbon
   position: absolute
-  top: 57px
+  top: 0
   right: 0
   z-index: 100
   width: 163px
+  +below(xl-snap)
+    z-index: 99
+    top: 57px
   +below(med-snap)
     display: none
   img
