--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -148,14 +148,28 @@ align(direction = both)
   transform-style: preserve-3d
   if (direction == horizontal) or (direction == h)
     left: 50%
+    -webkit-transform: translateX(-50%)
+    -moz-transform: translateX(-50%%)
+    -ms-transform: translateX(-50%)
+    -o-transform: translateX(-50%)
     transform: translateX(-50%)
   else if (direction == vertical) or (direction == v)
     top: 50%
+    -webkit-transform: translateY(-50%)
+    -moz-transform: translateY(-50%%)
+    -ms-transform: translateY(-50%)
+    -o-transform: translateY(-50%)
     transform: translateY(-50%)
   else
     top: 50%
     left: 50%
+    
+    -webkit-transform: translate(-50%, -50%)
+    -moz-transform: translate(-50%, -50%)
+    -ms-transform: translate(-50%, -50%)
+    -o-transform: translate(-50%, -50%)
     transform: translate(-50%, -50%)
+
 
 // Clearfix
 cf()
