[feat] add documentation for uncenter() mixin

--- a/src/views/_api-markdown.jade
+++ b/src/views/_api-markdown.jade
@@ -65,6 +65,13 @@ a.btn.view-example(data-scroll-goto='1', data-example='edit-example') View an ex
 a.btn.view-example(data-scroll-goto='6', data-example='center-example') View an example
 
 :markdown
+  <h3>uncenter</h3>
+
+  *`()`*
+
+  Cancel that `center()`. Note: This will revert back the applied styles from `center()` to default values.
+
+:markdown
   <h3>stack</h3>
 
   *`(pad = 0, align = center)`*
